[package]
name = "rust_htmx_todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.5.2"
rocket = {version = "0.5.0", features = ["json"]}
mongodb = "2.8.2"
serde = { version = "1.0.198", features = ["derive"] }
